--- a/msOrder/src/main/resources/application.yml
+++ b/msOrder/src/main/resources/application.yml
@@ -14,10 +14,17 @@ spring:
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       group-id: group_id
       key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      properties:
+        properties:
+          spring:
+            json:
+              add:
+                type:
+                  headers: 'false'
 kafka: producer.bootstrap-servers=127.0.0.1:9092
 topic:
   name:
-    producer: topico.comando.test
+    producer: topic.order.history
   
   # Common Kafka Properties
   auto:
